# AICity_SunyAlbany

./: README.md
HGTrack/: README.md
HGTrack/hgtrack/: CMakeLists.txt  FindOpenCV2.cmake
HGTrack/hgtrack/clique/: CMakeLists.txt  cliquer.cxx  cliquer.h  graph.cxx  graph.h  misc.cxx  misc.h  reorder.cxx  set.h
HGTrack/hgtrack/config/: CMakeLists.txt  config.cxx  config.h  param.cxx  param.h
HGTrack/hgtrack/detector/: CMakeLists.txt  detector.cxx  detector.h
HGTrack/hgtrack/export/: CMakeLists.txt  export.cxx  export.h
HGTrack/hgtrack/feat/: CMakeLists.txt  feat_class.cxx  feat_class.h  feat_funs.cxx  feat_funs.h
HGTrack/hgtrack/graph_decomp/: CMakeLists.txt  defs.h  detect_clusters.cxx  detect_clusters.h  graph_decomp.cxx  graph_decomp.h
HGTrack/hgtrack/graph_decomp/example/: CMakeLists.txt  graph_decomp_example.cxx
HGTrack/hgtrack/hgtracker/: CMakeLists.txt  hgtracker.cxx  hgtracker.h
HGTrack/hgtrack/math/: CMakeLists.txt  algebra.cxx  algebra.h  matrix.cxx  matrix.h  vector.cxx  vector.h
HGTrack/hgtrack/mt_tracker/: CMakeLists.txt
HGTrack/hgtrack/mt_tracker/example/: CMakeLists.txt  mt_tracker_example.cxx
HGTrack/hgtrack/opt/: CMakeLists.txt  hierarch_hypergraph.cxx  hierarch_hypergraph.h  video_segment_graph.cxx  video_segment_graph.h
HGTrack/hgtrack/run/: GraphMultiCarTracker_Config.txt  _run_HGTrack.bat
HGTrack/hgtrack/spline_fit/: CMakeLists.txt  alglibinternal.cxx  alglibmisc.cxx  ap.cxx  integration.cxx  integration.h  interpolation.cxx  linalg.cxx  linalg.h  optimization.cxx  solvers.cxx  specialfunctions.cxx  specialfunctions.h
HGTrack/hgtrack/util/: CMakeLists.txt  defs.cxx  defs.h  tframe.cxx  tframe.h  tracklet.cxx  tracklet.h
HGTrack/hgtrack_build_gcc/: __cmake_hgtrack_gcc.sh
HGTrack/run/: GraphMultiCarTracker_Config.txt  mt_tracker_release
HGTrack/run/Detection/: Example_Det.txt
HGTrack/run/Example/: Example_Path.txt
object_detection/: 480list.txt  create_pascal_tf_record.py  nVidia_images_inference.py  view_annotation.py
object_detection/data/: aic_label_map.pbtxt
object_detection/models/model/: faster_rcnn_resnet101_aic.config
object_detection/scripts/: create_dataset.py  evaluate.py  show_label.py
object_detection/utils/: visualization_utils.py
object_detection/viz/: viz_tracking_cmd.py
